<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:orderInCategory="1"
            android:icon="@drawable/ic_home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_favorites"
            android:orderInCategory="2"
            android:icon="@drawable/ic_no_favorite"
            android:title="@string/title_favorite" />
        <item
            android:id="@+id/nav_gallery"
            android:orderInCategory="3"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_gallery" />
        <item
            android:id="@+id/nav_profile"
            android:orderInCategory="4"
            android:icon="@drawable/ic_profile"
            android:title="@string/title_profile" />
        <item
            android:id="@+id/nav_superfavorito"
            android:orderInCategory="5"
            android:icon="@drawable/ic_compartir"
            android:title="@string/title_compartir" />
    </group>
</menu>