<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.grt.pokemon.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.grt.pokemon.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_nav_favorites_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.grt.pokemon.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_nav_home"
            app:popUpTo="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.grt.pokemon.ui.detail.DetailFragment"
        android:label="Características"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="pokemon"
            app:argType="com.grt.pokemon.domain.model.PokemonModel" />
    </fragment>
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.grt.pokemon.ui.gallery.GalleryFragment"
        android:label="@string/title_gallery"
        tools:layout="@layout/fragment_gallery"/>
    <fragment
        android:id="@+id/nav_share"
        android:name="com.grt.pokemon.ui.share.ShareFragment"
        android:label="Compartir Favorito"
        tools:layout="@layout/fragment_share" >
        <action
            android:id="@+id/action_nav_share_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_home" />
    </fragment>
</navigation>