<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/celeste"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvDetailName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textColor="@color/azul_oscuro"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/ivDetailImage"
            app:layout_constraintEnd_toStartOf="@+id/ivStartFavorita"
            app:layout_constraintStart_toStartOf="@id/guideLeft"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title" />

        <ImageView
            android:id="@+id/ivDetailImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/guideRight"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/guideLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailName"
            tools:ignore="ImageContrastCheck" />

        <!-- Especie-->
        <TextView
            android:id="@+id/tvDetailEspecieValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/especie"
            android:textColor="@color/azul_oscuro"
            android:textColorLink="@color/azul_oscuro"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvEspecie"
            app:layout_constraintStart_toStartOf="@+id/guideCenter" />

        <TextView
            android:id="@+id/tvEspecie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:text="@string/especie"
            android:textColor="@color/naranja"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideCenter"
            app:layout_constraintTop_toBottomOf="@+id/ivDetailImage" />

        <!-- Peso-->
        <TextView
            android:id="@+id/tvDetailPesoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peso"
            android:textColor="@color/naranja"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvPeso"
            app:layout_constraintStart_toStartOf="@+id/guideCenter" />

        <TextView
            android:id="@+id/tvPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/peso"
            android:textColor="@color/azul_oscuro"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvEspecie"
            app:layout_constraintTop_toBottomOf="@+id/tvEspecie" />

        <!-- Forma-->
        <TextView
            android:id="@+id/tvDetailFormaValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forma"
            android:textColor="@color/azul_oscuro"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvForma"
            app:layout_constraintStart_toStartOf="@+id/guideCenter" />

        <TextView
            android:id="@+id/tvForma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forma"
            android:textColor="@color/naranja"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvPeso"
            app:layout_constraintTop_toBottomOf="@+id/tvPeso" />

        <!-- Altura-->
        <TextView
            android:id="@+id/tvDetailAlturaValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altura"
            android:textColor="@color/naranja"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvAltura"
            app:layout_constraintStart_toStartOf="@+id/guideCenter" />

        <TextView
            android:id="@+id/tvAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/altura"
            android:textColor="@color/azul_oscuro"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvForma"
            app:layout_constraintTop_toBottomOf="@+id/tvForma" />

        <!-- Experiencia-->
        <TextView
            android:id="@+id/tvDetailExperienceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/base_de_experiencia"
            android:textColor="@color/azul_oscuro"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvExperiencia"
            app:layout_constraintStart_toStartOf="@+id/guideCenter" />

        <TextView
            android:id="@+id/tvExperiencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/base_de_experiencia"
            android:textColor="@color/naranja"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvAltura"
            app:layout_constraintTop_toBottomOf="@+id/tvAltura" />

        <!-- Por Defecto-->
        <TextView
            android:id="@+id/tvDetailDefaultValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isDefault"
            android:textColor="@color/naranja"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvDefault"
            app:layout_constraintStart_toStartOf="@+id/guideCenter" />

        <TextView
            android:id="@+id/tvDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/isDefault"
            android:textColor="@color/azul_oscuro"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvExperiencia"
            app:layout_constraintTop_toBottomOf="@+id/tvExperiencia" />

        <!-- Habilidades-->
        <TextView
            android:id="@+id/tvDetailAbilitiesValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abilities"
            android:textColor="@color/azul_oscuro"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvAbilities"
            app:layout_constraintStart_toStartOf="@+id/guideCenter" />

        <TextView
            android:id="@+id/tvAbilities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/abilities"
            android:textColor="@color/naranja"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvDefault"
            app:layout_constraintTop_toBottomOf="@+id/tvDefault" />

        <!-- Tipos-->
        <TextView
            android:id="@+id/tvDetailTypesValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/types"
            android:textColor="@color/naranja"
            android:textSize="16sp"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvTypes"
            app:layout_constraintStart_toStartOf="@+id/guideCenter" />

        <TextView
            android:id="@+id/tvTypes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/types"
            android:textColor="@color/azul_oscuro"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvAbilities"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailAbilitiesValue" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04136253"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.96107054" />

        <ImageView
            android:id="@+id/ivStartFavorita"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvDetailName"
            app:layout_constraintEnd_toStartOf="@+id/guideRight"
            app:layout_constraintStart_toEndOf="@+id/tvDetailName"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_no_favorite" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>